# myPasc2C

./: CMakeLists.txt  Grammar.yml  LR1-Parse-Table.csv  LR1-Parse-Table.yml  Tokens.txt  ast.txt  code_err.pascal  debug.txt  error.pascal  prim.pascal  record.pascal  run.sh  semantic.md  temp.pascal  test-01.sh  test-02.sh  test-temp.sh  tips.txt
include/: GrammarPool.hpp  Iterms.hpp  ItermsPool.hpp  LPDebug.hpp  LR1ParseTable.hpp  Lexer.hpp  ParseStack.hpp  Production.hpp  Semantic.hpp  Symbol.hpp  SymbolTable.hpp  SyntaxTree.hpp  cmdline.h
src/: GrammarPool.cpp  Iterms.cpp  ItermsPool.cpp  LR1ParseTable.cpp  Lexer.cpp  ParseStack.cpp  Pasc2c.cpp  ProductionPool.cpp  Semantic.cpp  SymbolTable.cpp  SyntaxTree.cpp
